# walle

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  LICENSE  flake.nix
tests/: CMakeLists.txt
